few spacing issues with columns

--- a/sass/modules/cta/_cta.sass
+++ b/sass/modules/cta/_cta.sass
@@ -3,10 +3,6 @@
   @include clearfix()
   padding: 0 $mobile-padding
   text-align: center
-  .container
-    padding: 3.125em 0 2.75em
-    @include media(min-width $mobile)
-      padding: 6.125em 0 6.75em
   h1
     margin-bottom: 0
   overflow: auto
