--- a/sass/modules/tri-column/_tri-column.sass
+++ b/sass/modules/tri-column/_tri-column.sass
@@ -13,7 +13,6 @@
     @include span-columns(12)
     padding-top: 0  
     padding-bottom: 0
-    padding-top: 38px
     padding-bottom: 38px
     @include media(min-width $tablet)
       @include span-columns(4)
